--- a/ScriptEngine/ScriptEngine.vbproj
+++ b/ScriptEngine/ScriptEngine.vbproj
@@ -96,6 +96,7 @@
     <Reference Include="MonoGame.Framework, Version=3.6.0.1625, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -124,6 +125,7 @@
     <Compile Include="ClosetPointFinder.vb" />
     <Compile Include="DebugDeviceTextures.vb" />
     <Compile Include="EditorTester.vb" />
+    <Compile Include="FireLaser.vb" />
     <Compile Include="GameControlTest.vb" />
     <Compile Include="LocalAxisRenderer.vb" />
     <Compile Include="MatrixTester.vb" />
@@ -148,6 +150,7 @@
     <Compile Include="PsudodistanceTester.vb" />
     <Compile Include="RayTester.vb" />
     <Compile Include="RigidbodyController.vb" />
+    <Compile Include="Spin.vb" />
     <Compile Include="StartringForce.vb" />
     <Compile Include="TestScript.vb" />
     <Compile Include="TestSpriteController.vb" />
